[build-system]
requires = ["setuptools", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "liana-rpc"
version = "0.0.3"
description = "RPC client for connect to Liana daemon (lianad)"
license = {file = "LICENSE"}
authors = [
  {name = "pythcoiner", email = "pythcoiner@proton.me"},
  {name = "darosior", email = "darosior@protonmail.com"},
]
requires-python = ">=3.9"
keywords = ["bitcoin", "liana", "lianad", "rpc"]
dependencies = [
]

classifiers = [
    "Topic :: Office/Business :: Financial",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://wizardsardine.com/liana"
